--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11.1</version>
+  <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
