--- a/.github/workflows/github-actions-echo-on-pull_request.yml
+++ b/.github/workflows/github-actions-echo-on-pull_request.yml
@@ -1,8 +1,7 @@
 name pull-request-echo
-on:
-  pull_request:
-    types:
-      - opened
+on: [pull_request]
+  types:
+    - opened
 jobs:
   runs-on: ubuntu-latest
   steps:
