--- a/.github/workflows/github-actions-echo-on-pull_request.yml
+++ b/.github/workflows/github-actions-echo-on-pull_request.yml
@@ -1,7 +1,8 @@
 name: pull request echo
-on: [pull_request]
-  types:
-    - opened
+on: [push]
+#on: [pull_request]
+#  types:
+#    - opened
 jobs:
   runs-on: ubuntu-latest
   steps:
