--- a/.github/workflows/push-to-slack.yml
+++ b/.github/workflows/push-to-slack.yml
@@ -24,14 +24,14 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: action-slack
-      uses: 8398a7/action-slack@v3.12.0
+        uses: 8398a7/action-slack@v3.12.0
 
-      with:
-        status: ${{ job.status }}
-        fields: repo,message #,commit,author,action,eventName,ref,workflow,job,took,pullRequest # selectable (default: repo,message)
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
-      if: always()
+        with:
+          status: ${{ job.status }}
+          fields: repo,message #,commit,author,action,eventName,ref,workflow,job,took,pullRequest # selectable (default: repo,message)
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }} # required
+        if: always()
 
       # Runs a single command using the runners shell
       #- name: Run a one-line script
